--- a/index.html
+++ b/index.html
@@ -34,21 +34,21 @@
 						<img src="images/faces/everyday.png" alt="" class="main-face-img">
 						<h5>Everyday Shaver</h5>
 						<p>Shaves 5-7 days per week</p>
-						<a href="#" class="button enroll" data-plan="everyday">This is me</a>
+						<a href="#" class="button init-enroll" data-plan="everyday">This is me</a>
 						<p>Ships every 2 months</p>
 					</div>
 					<div class="large-4 columns">
 						<img src="images/faces/occasional.png" alt="" class="main-face-img">
 						<h5>Occasional Shaver</h5>
 						<p>Shaves a few days per week</p>
-						<a href="#" class="button enroll" data-plan="occasional">This is me</a>
+						<a href="#" class="button init-enroll" data-plan="occasional">This is me</a>
 						<p>Ships every 3 months</p>
 					</div>
 					<div class="large-4 columns">
 						<img src="images/faces/infrequent.png" alt="" class="main-face-img">
 						<h5>Infrequent Shaver</h5>
 						<p>Shaves 1-2 days per week</p>
-						<a href="#" class="button enroll" data-plan="infrequent">This is me</a>
+						<a href="#" class="button init-enroll" data-plan="infrequent">This is me</a>
 						<p>Ships every 5 months</p>
 					</div>
 				</div>
