--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			<div class="main-section">
 				<div class="row pre-face">
 					<div class="large-6 large-offset-3 columns">
-						<h5>Step 1: Choose how often you shave</h5>
+						<h5>To get started, choose how often you shave</h5>
 					</div>
 				</div>
 				<div class="row main-faces">
