add prices and products

--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
 			<div class="row intro">
 				<div class="large-6 large-offset-3 columns">
 					<h3>Harry's Shave Plans</h3>
-					<h5>Our shaving subscription service.</h5>
-					<h5>Never get stuck on your last dull blade again. Cancel or modify any time.</h5>
+					<h6>8 blades + 2 foaming gels automatically delivered to your door for $30 per shipment (save $9)</h6>
 				</div>
 			</div>
 			<div class="main-section">
@@ -36,6 +35,7 @@
 						<p>Shaves 5-7 days per week</p>
 						<a href="#" class="button init-enroll" data-plan="everyday">This is me</a>
 						<p>Ships every 2 months</p>
+						<p>$15.00 / month</p>
 					</div>
 					<div class="large-4 columns">
 						<img src="images/faces/occasional.png" alt="" class="main-face-img">
@@ -43,6 +43,7 @@
 						<p>Shaves a few days per week</p>
 						<a href="#" class="button init-enroll" data-plan="occasional">This is me</a>
 						<p>Ships every 3 months</p>
+						<p>$10.00 / month</p>
 					</div>
 					<div class="large-4 columns">
 						<img src="images/faces/infrequent.png" alt="" class="main-face-img">
@@ -50,6 +51,7 @@
 						<p>Shaves 1-2 days per week</p>
 						<a href="#" class="button init-enroll" data-plan="infrequent">This is me</a>
 						<p>Ships every 5 months</p>
+						<p>$6.00 / month</p>
 					</div>
 				</div>
 			</div>
